force-app/main/default/objects/Opportunity/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <label>ビジネスユニット</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>エネルギー＆インダストリー</fullName><default>false</default><label>エネルギー＆インダストリー</label></value>
            <value><fullName>デジタルシステムズ</fullName><default>false</default><label>デジタルシステムズ</label></value>
            <value><fullName>プロフェッショナルサービス</fullName><default>false</default><label>プロフェッショナルサービス</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>