force-app/main/default/objects/Opportunity/fields/SDO_Sales_Competitor__c.field-meta.xml
<CustomField>
    <fullName>SDO_Sales_Competitor__c</fullName>
    <description>What: Used in Analytics Demo Data Tool. Who: Rodrigo Mercader
Used in Sales Paths on Opportunity</description>
    <label>競合他社</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Competitor A</fullName>
                <label>競合A社</label>
            </value>
            <value>
                <fullName>Competitor B</fullName>
                <label>競合B社</label>
            </value>
            <value>
                <fullName>Competitor C</fullName>
                <label>競合C社</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>