force-app/main/default/objects/Opportunity/recordTypes/Design_Win.recordType-meta.xml
<RecordType>
    <fullName>Design_Win</fullName>
    <active>true</active>
    <businessProcess>Design_Win_Process</businessProcess>
    <label>Design Win</label>
</RecordType>